Kubernetes/tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-spring
  labels:
    app: spring
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: tomcat-spring
          image: atinho/tomcat-spring:4.3
          ports:
            - containerPort: 8080
